WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234501
[Win] MSVC reports "COMVariantSetter.h(133): error C2760: syntax error: unexpected token 'identifier', expected ';'" with /std:c++20
https://bugs.webkit.org/show_bug.cgi?id=234501
Summary
[Win] MSVC reports "COMVariantSetter.h(133): error C2760: syntax error: unexp...
Fujii Hironori
Reported
2021-12-19 20:41:48 PST
[Win] MSVC reports "COMVariantSetter.h(133): error C2760: syntax error: unexpected token 'identifier', expected ';'" with /std:c++20
> Source\WebKitLegacy\win\COMVariantSetter.h(133): error C2760: syntax error: unexpected token 'identifier', expected ';' > Source\WebKitLegacy\win\COMVariantSetter.h(140): note: see reference to class template instantiation 'COMVariantSetter<WTF::Vector<T,0,WTF::CrashOnOverflow,16,WTF::VectorMalloc>>' being compiled
Attachments
Patch
(3.14 KB, patch)
2021-12-19 20:46 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-12-19 20:46:40 PST
Created
attachment 447577
[details]
Patch
Fujii Hironori
Comment 2
2021-12-20 11:58:44 PST
Comment on
attachment 447577
[details]
Patch Clearing flags on attachment: 447577 Committed
r287269
(
245425@trunk
): <
https://commits.webkit.org/245425@trunk
>
Fujii Hironori
Comment 3
2021-12-20 11:58:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2021-12-20 11:59:17 PST
<
rdar://problem/86734480
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug